2024-04-07  David Blacka  <david@blacka.com>

        * Released version 0.20
        * Removed support for Gradle builds since the gradle config was
        out-of-date
        * Requires Java 15 or later for EdDSA support
        * Supports DNSSEC algorithm 16 using the SunEC provider
        * Supports a java properties-formatted config file.  See
        jdnssec-tools.properties.example for an example
        * Updated to dnsjava 3.5.3
        * Updated to commons-cli 1.6.0
        * Added a "one-jar" distribution method, and a "univeral" CLI to
        use with it.
        * Formatting and linter suggestions

2024-03-25  David Blacka <davidb@verisign.com>

        * Released version 0.19
        * Handle duplicate key tags
        * jdnssec-keygen can now attempt to generate keys with specified key tags

2023-07-24  David Blacka  <davidb@verisign.com>

        * Released version 0.17.1
        * Add a `-t` option to jdnssec-verifyzone: verify using specified time.

2022-09-21  David Blacka  <davidb@verisign.com>

        * Released version 0.17
        * Updated to dnsjava 3.5.1
        * Formatting and linter suggestions
        * Use slf4j instead of log4j.
        * jdnssec-dstool can now generate CDS records

2019-07-23  David Blacka  <davidb@verisign.com>

        * Released version 0.16
        * Updated to dnsjava 2.1.9

2019-02-26  David Blacka  <davidb@verisign.com>

        * Released version 0.15
        * Ensure when a command line tool throws an exception it exits
        with a non-zero exit code.
        * Update local dnsjava jar to match actual build for
        jdnssec-dnsjava.

2018-11-16  David Blacka  <davidb@verisign.com>

        * Released version 0.14

2018-07-15  Pallavi Aras

        * Add Gradle build support.  Adjust ant to use same paths.

2018-07-15  David Blacka <davidb@versigin.com

        * Add algorithm 15 support.  This included adding a public domain
        EdDSA library to the distribution.