@@ -9,3 +9,4 @@ docs
 test-zones
 settings.json
 .settings
+target/
